--- a/regiamare-web/src/routes/About/About.css
+++ b/regiamare-web/src/routes/About/About.css
@@ -70,6 +70,7 @@
   color: var(--color-text-light);
   line-height: 1.8;
   margin-bottom: var(--spacing-lg);
+  text-align: justify;
 }
 
 .about-values {
