--- a/regiamare-web/src/routes/Services/Services.css
+++ b/regiamare-web/src/routes/Services/Services.css
@@ -192,6 +192,7 @@
   color: var(--color-gray-green);
   line-height: 1.8;
   margin-bottom: 20px;
+  text-align: justify;
 }
 
 @media (min-width: 1025px) {
