--- a/regiamare-web/src/routes/Sales/Sales.css
+++ b/regiamare-web/src/routes/Sales/Sales.css
@@ -147,6 +147,7 @@
   font-size: 16px;
   color: rgba(255, 255, 255, 0.9);
   line-height: 1.6;
+  text-align: justify;
 }
 
 /* Accordion Styles */
