--- a/regiamare-web/src/components/ImageGallery/ImageGallery.css
+++ b/regiamare-web/src/components/ImageGallery/ImageGallery.css
@@ -223,6 +223,10 @@
   padding: 10px 0;
 }
 
+.modal-bottom-spacing {
+  display: none;
+}
+
 .modal-thumbnail {
   min-width: 80px;
   height: 60px;
@@ -308,7 +312,7 @@
   .modal-main-image {
     width: 100vw;
     height: auto;
-    max-height: calc(100vh - 200px);
+    max-height: calc(100vh - 300px);
     object-fit: contain;
     border-radius: 0;
     box-shadow: none;
@@ -385,8 +389,13 @@
     gap: 6px;
   }
 
+  .modal-bottom-spacing {
+    display: flex;
+    height: 5rem;
+    background-color: var(--color-beige);
+  }
   .modal-thumbnail {
     min-width: 60px;
-    height: 45px;
+    height: 60px;
   }
 }
